[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Globals/MusicAndSFXHandler.gd" type="Script" id=1]

[node name="MusicAndSFXHandler" type="Node"]
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
bus = "Music"

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="SFXPlayerBackup" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="SFXPlayerBackup2" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="SFXPlayerBackup3" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="SFXPlayerBackup4" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="SFXPlayerBackup5" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="Tween" type="Tween" parent="."]
